--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "mysql": "^2.18.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
