--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
+    "glob-parent": "^6.0.2",
+    "immer": "^9.0.12",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
+    "mongoose": "^6.2.9",
     "mysql": "^2.18.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
