--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
