did file info, remove

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npx nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   },
   "author": "",
   "license": "ISC"
