--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
