--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf-autotable": "^3.5.23",
     "mysql": "^2.18.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.16",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
