--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "npx nodemon app.js"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    },
+    "author": "",
+    "license": "ISC"
 }
