--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-export-excel": "^0.5.3",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
